--- a/ux.html
+++ b/ux.html
@@ -41,10 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4369940002'>Job Application for UX / UI Designer at Cast & Crew Entertainment Services, LLC</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://modus.recruiterbox.com/jobs/fk03ft7/'>
     UX Project Manager at Modus
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oBnEafww'>Bravium Consulting Careers - Salesforce UI/UX Designer</a></h5> 
@@ -89,7 +93,7 @@
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
     UX Project Manager at Modus
 </a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
@@ -153,7 +157,7 @@ taking down all barriers and disrupting the trading experience, we're helping ne
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://clark.join.com/jobs/266570-lead-ux-design-customer-analytics-m-f-x'>Job @ Clark Germany (Frankfurt): Lead UX / Design ... | JOIN</a></h5> 
+<h5><a href='https://clark.join.com/jobs/266570-lead-ux-design-customer-analytics-m-f-x'>Job @ Clark Germany (Frankfurt): Lead UX / Design ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -177,11 +181,11 @@ taking down all barriers and disrupting the trading experience, we're helping ne
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>7 hours ago ... In this role you will focus on multiple facets of the design process including user 
 research, interaction design, data visualization, prototyping, and the production?...</p>
@@ -196,7 +200,7 @@ research, interaction design, data visualization, prototyping, and the productio
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
+<h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta</span></p>
@@ -336,7 +340,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -348,7 +352,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -364,7 +368,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
+<h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
       UX Designer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -459,10 +463,6 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <h5><a href='https://maisonmoderne.recruiterbox.com/jobs/fk03flh/'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='http://7summitsinc.applytojob.com/apply/iUr3AozNum/Sr-UX-Designer'>Sr. UX Designer - 7Summits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
